Revision history for {{ $dist->name }}

{{ $NEXT }}
    - Add Dockerfile

0.014     2017-05-01 17:02:51+09:00 Asia/Seoul
    - D-1 내용 변경 (#27)

0.013     2017-04-05 14:02:27+09:00 Asia/Seoul
    - 반납일(D-day) 의 문자메세지 내용변경

0.012     2017-03-02 18:29:40+09:00 Asia/Seoul
    - 링크 오작동 예방을 위해 URL 앞뒤의 괄호를 제거
    - 반납일(D-day) 의 문자메세지 내용변경

0.011     2017-01-09 18:07:14+09:00 Asia/Seoul
    - 반납 당일 문자 메세지 내용 변경 (#22)
    - 공휴일에는 D+1, D+2, D+3 문자를 발송하지 않음 (#24)

0.010     2016-10-07 18:13:46+09:00 Asia/Seoul
    - order.ignore_sms 주문서는 SMS 를 보내지 않음 (#20)

0.009     2016-10-07 17:45:29+09:00 Asia/Seoul
    - D-1 내용 변경 (#14)
    - D+2 내용 변경 (#17)
    - D+3 내용 변경 (#19)
    - D+3 발송 시간 변경 10:50 to 14:20 (#19)
    - D-1 발송 시간 변경 11:00 to 11:30 (#14)
    - D+2 발송 시간 변경 10:55 to 11:35 (#17)
    - D-day SMS 추가 11:40 (#15)
    - D+1 SMS 추가 11:45 (#16)

0.008     2016-04-22 15:41:59+09:00 Asia/Seoul
    - 안내 SMS 에서 late fee 를 20% 에서 30% 로 변경 (#12)
    - bug fix 봉사활동 당일 08:00 에 안내문자를 발송 (#11)

0.007     2016-03-25 16:29:18+09:00 Asia/Seoul
    - 봉사활동 당일 08:00 에 안내문자를 발송 (#11)

0.006     2015-12-10 08:56:34+09:00 Asia/Seoul
    - 택배반납후 운송장을 작성한 사용자에게는 독촉 문자를 보내지 않음

0.005     2015-10-13 17:49:20+09:00 Asia/Seoul
    - Remove `-` mark at recipient numbers (#8, volunteer#36)

0.004     2015-09-08 18:14:05+09:00 Asia/Seoul
    - Send sms to today's volunteers for guestbook (#7, volunteer#12)

0.003     2015-07-10 18:02:35+09:00 Asia/Seoul
    - Send sms 3 day after target day or user target day (#1)
    - Fix datetime calculation bug (#2)
    - Send sms 2 day after target day or user target day (#1)

0.002     2015-07-09 20:59:39+09:00 Asia/Seoul
    - Update pod document
    - opencloset-cron-sms.pl checks config file before execute
    - Remove time zone supports monkey patch (#4)

0.001     2015-07-08 16:23:38+09:00 Asia/Seoul
    - Send sms 1 day before target day or user target day (#2)
    - first release